[package]
name = "corrOSion"
version = "0.5.0"
authors = ["Andre Richter <andre.o.richter@gmail.com>", "Vegard Kamsvåg <vegardkamsvaag@gmail.com>"]
edition = "2021"

[profile.release]
lto = true

[features]
default = []
bsp_rpi3 = ["tock-registers"]
bsp_rpi4 = ["tock-registers"]

[[bin]]
name = "kernel"
path = "src/main.rs"

## -------------------------
## dependencies
## -------------------------
[dependencies]
# Optional dependencies
tock-registers = { version = "0.8.x", default-features = false, features = ["register-types"], optional = true }
# Platform specific dependencies
[target.'cfg(target_arch = "aarch64")'.dependencies]
aarch64-cpu = { version = "9.x.x" }
